tests/src/frontend/typechecking/invalid/concrete_void_object.sk
class A()

fun foo(): void {
  a = A();
  _v = Array[a, void]
}
